--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,5 +8,6 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
+     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
 }
