--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
